# boxbackup

./: .gitignore  .travis.yml  VERSION.txt  appveyor.yml  configure.ac  modules.txt  parcels.txt  runtest.pl.in  win32.bat
07-win32-fixes/: modules.txt
07-win32-fixes/test/crypto/: testcrypto.cpp
docs/backup/: win32_build_on_linux_using_mingw.txt
infrastructure/: BoxPlatform.pm  buildenv-testmain-template.cpp  makebuildenv.pl  makebuildenv.pl.in  makeparcels.pl  travis-build.sh
infrastructure/cmake/: CMakeLists.txt
infrastructure/cmake/windows/: CMakeLists.txt
infrastructure/m4/: ax_check_mount_point.m4  boxbackup_tests.m4
infrastructure/msvc/: getversion.pl
infrastructure/msvc/2005/: bbackupctl.vcproj  bbackupd.vcproj  boxquery.vcproj  common.vcproj  win32test.vcproj
lib/backupclient/: BackupClientFileAttributes.cpp  BackupStoreDirectory.h  BackupStoreFile.cpp  BackupStoreFile.h  BackupStoreFileDiff.cpp  BackupStoreFilenameClear.cpp
lib/backupstore/: BackupAccountControl.cpp  BackupAccountControl.h  BackupFileSystem.cpp  BackupFileSystem.h  BackupProtocol.h  BackupStoreAccounts.cpp  BackupStoreAccounts.h  BackupStoreContext.cpp  BackupStoreException.txt  BackupStoreFile.cpp  BackupStoreFile.h  BackupStoreInfo.cpp  BackupStoreInfo.h  BackupStoreRefCountDatabase.cpp  StoreTestUtils.cpp
lib/bbackupquery/: makedocumentation.pl.in
lib/common/: Box.h  BoxException.cpp  BoxException.h  BoxPlatform.h  BoxPortsAndFiles.h  BoxTimeToText.cpp  CollectInBufferStream.cpp  Configuration.cpp  Configuration.h  ConversionString.cpp  EventWatchFilesystemObject.cpp  ExcludeList.cpp  ExcludeList.h  FdGetLine.cpp  FileStream.cpp  FileStream.h  Guards.h  Logging.cpp  Logging.h  Test.cpp  Test.h  Timer.cpp  UnixUser.cpp  makeexception.pl.in
lib/httpserver/: HTTPException.txt  HTTPHeaders.h  S3Client.cpp  S3Client.h  S3Simulator.cpp  S3Simulator.h
lib/raidfile/: RaidFileRead.cpp
lib/server/: Daemon.cpp  LocalProcessStream.cpp  ServerControl.h  ServerStream.h  Socket.cpp  Socket.h  SocketStream.cpp  SocketStreamTLS.cpp  WinNamedPipeStream.cpp  makeprotocol.pl
lib/win32/: WinNamedPipeStream.cpp  emu.cpp  emu.h
test/backupdiff/: testbackupdiff.cpp
test/backupstore/: testbackupstore.cpp
test/backupstorefix/: testbackupstorefix.cpp
test/backupstorepatch/: testbackupstorepatch.cpp
test/bbackupd/: testbbackupd.cpp
test/bbackupd/testfiles/: bbackupd.conf.in
test/common/: testcommon.cpp
test/httpserver/: testhttpserver.cpp
test/s3store/: tests3store.cpp
test/win32/: Makefile  testlibwin32.cpp  timezone.cpp
